# epoll

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  epoll.c  epoll.h  et_and_lt.md  kepoll.c  main.c  review.md  uepoll.c  uepoll.h
.github/workflows/: ci.yml
build_asan/: CMakeCache.txt  Makefile  cmake_install.cmake  main
docs/: api.md
include/epoll/: epoll.h  epoll_internal.h  uepoll.h  wepoll.h
src/: epoll.c  kepoll.c  pepoll.c  ppoll.c  uepoll.c  wepoll.c
test/: bench.c  main.c
